@@ -97,9 +97,45 @@ verilog/v_hier_subprim.v:029: PREPROC '`endcelldefine'
 verilog/v_hier_subprim.v:031: unreadback '
 
 '
-verilog/v_hier_subprim.v:031: PREPROC '`line 31 "verilog/v_hier_subprim.v" 2
+verilog/v_hier_subprim.v:031: PREPROC '`celldefine'
+verilog/v_hier_subprim.v:032: unreadback '
 '
-verilog/v_hier_subprim.v:031: ENDPARSE ''
+verilog/v_hier_subprim.v:032: KEYWORD 'module'
+verilog/v_hier_subprim.v:032: unreadback ' '
+verilog/v_hier_subprim.v:032: SYMBOL 'bug893'
+verilog/v_hier_subprim.v:032: OPERATOR '('
+verilog/v_hier_subprim.v:032: OPERATOR ')'
+verilog/v_hier_subprim.v:032: OPERATOR ';'
+verilog/v_hier_subprim.v:033: unreadback '
+   '
+verilog/v_hier_subprim.v:033: KEYWORD 'reg'
+verilog/v_hier_subprim.v:033: unreadback ' '
+verilog/v_hier_subprim.v:033: SYMBOL 'r'
+verilog/v_hier_subprim.v:033: OPERATOR ';'
+verilog/v_hier_subprim.v:034: unreadback '
+   '
+verilog/v_hier_subprim.v:034: KEYWORD 'initial'
+verilog/v_hier_subprim.v:034: unreadback ' '
+verilog/v_hier_subprim.v:034: SYMBOL 'r'
+verilog/v_hier_subprim.v:034: unreadback ' '
+verilog/v_hier_subprim.v:034: OPERATOR '<='
+verilog/v_hier_subprim.v:034: OPERATOR '#'
+verilog/v_hier_subprim.v:034: NUMBER '1'
+verilog/v_hier_subprim.v:034: unreadback ' '
+verilog/v_hier_subprim.v:034: NUMBER ''0'
+verilog/v_hier_subprim.v:034: OPERATOR ';'
+verilog/v_hier_subprim.v:035: unreadback '
+'
+verilog/v_hier_subprim.v:035: KEYWORD 'endmodule'
+verilog/v_hier_subprim.v:036: unreadback '
+'
+verilog/v_hier_subprim.v:036: PREPROC '`endcelldefine'
+verilog/v_hier_subprim.v:038: unreadback '
+
+'
+verilog/v_hier_subprim.v:038: PREPROC '`line 38 "verilog/v_hier_subprim.v" 2
+'
+verilog/v_hier_subprim.v:038: ENDPARSE ''
 verilog/v_hier_sub.v:001: PREPROC '`line 1 "verilog/v_hier_sub.v" 1
 '
 verilog/v_hier_sub.v:006: unreadback ' 
