@@ -17,6 +17,9 @@ verilog/v_hier_subprim.v:022: ENDMODULE  'endprimitive'
 verilog/v_hier_subprim.v:025: MODULE  'module' 'bug27070' undef '1'
 verilog/v_hier_subprim.v:027: VAR  'parameter' 'TAP' 'module' '' '' '' '4'b1001'
 verilog/v_hier_subprim.v:028: ENDMODULE  'endmodule'
+verilog/v_hier_subprim.v:032: MODULE  'module' 'bug893' undef '1'
+verilog/v_hier_subprim.v:033: VAR  'var' 'r' 'module' '' 'reg' '' ''
+verilog/v_hier_subprim.v:035: ENDMODULE  'endmodule'
 verilog/v_hier_sub.v:001: COMMENT  '// DESCRIPTION: Verilog-Perl: Example Verilog for testing package'
 verilog/v_hier_sub.v:002: COMMENT  '//'
 verilog/v_hier_sub.v:003: COMMENT  '// This file ONLY is placed into the Public Domain, for any use,'
